@@ -75,6 +75,9 @@ From 1.6.2 to 1.8:
   OSPCALLED to OSPOUTCALLED
   OSPRESULTS to OSPDESTREMAILS
 
+* The Manager event 'iax2 show peers' output has been updated.  It now has a
+  similar output of 'sip show peers'.
+
 From 1.6.1 to 1.6.2:
 
 * SIP no longer sends the 183 progress message for early media by
